{
    "name": "UserInputActions",
    "maps": [
        {
            "name": "InventoryActions",
            "id": "e6d631bd-75a0-4fbf-b790-932a81cd3593",
            "actions": [
                {
                    "name": "OpenInventory1",
                    "type": "Button",
                    "id": "935b16d7-1283-4bf6-afed-4e5a2f42452a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenInventory2",
                    "type": "Button",
                    "id": "9e6cf78c-3286-42c7-b8b7-d629d57ebf09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddItemsToInventory",
                    "type": "Button",
                    "id": "e4cb63fa-a750-4295-ba6c-b62567a24a59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveItemsFromInventory",
                    "type": "Button",
                    "id": "f04c22b9-e2d2-4871-8b59-b4fd99bab65b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "14075ffb-bb3c-4971-8353-e5936d135d9e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "OpenInventory1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b80449b0-99aa-4427-859b-772fbf863cd5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "OpenInventory2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11514d7d-9656-4f9e-8bb3-7c76819594db",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "AddItemsToInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fa3b9da-a9d3-4dce-8625-214ef1348815",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "RemoveItemsFromInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}